--- a/Sito Arredi - Samuel/index.htm
+++ b/Sito Arredi - Samuel/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <div id="titolo">YourGarden</div>
+    <div id="titolo">YourGarden!</div>
 
     <div id="sottotitolo">Arredi da giardino artigianali</div>
 
